--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,10 @@
 {
     "cSpell.words": [
         "canxin",
+        "clitic",
         "gmtime",
         "liveid",
         "mday",
-        "nilaoda",
         "tqdm"
     ]
 }
