Update authentication and video download for new API
Added AUTHENTICATION.md to document new authentication requirements. Refactored downloader and API modules to support direct MP4 downloads with cookie-based authentication. Updated .gitignore to exclude sensitive and test files. Improved Automation.py and XDUClassVideoDownloader.py for new video format and user prompts. Removed obsolete .vscode/settings.json. Enhanced utils.py with cookie management functions for authentication.

--- a/.gitignore
+++ b/.gitignore
@@ -161,3 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 config.ini
+auth.ini
+*.csv
+
+# 忽略所有以 test_ 开头的 Python 文件
+test_*.py
